@@ -1,3 +1,8 @@
+2001-01-25  Kazu Hirata  <kazu@hxi.com>
+
+	* bfd-in2.h: Rebuild.
+	* libbfd.h: Likewise.
+
 2001-01-23  H.J. Lu  <hjl@gnu.org>
 
 	* bfd-in2.h: Rebuild.
